--- a/android/app/src/main/res/layout/launch_screen.xml
+++ b/android/app/src/main/res/layout/launch_screen.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/splash_color">
+    android:layout_height="match_parent">
 
-    <ImageView android:layout_width="280dp"
+    <!-- <ImageView android:layout_width="280dp"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:src="@drawable/logo_splash" />
+        android:src="@drawable/logo_splash" /> -->
 
-    <TextView
+    <!-- <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="#9e9e9e"
@@ -17,5 +16,31 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:textSize="12sp" 
-        android:text="©2020, Saloonaat.com"/>
+        android:text="©2020, Saloonaat.com"/> -->
+
+    <ImageView android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"
+        android:layout_centerInParent="true"
+        android:src="@drawable/splash" />
+
+    <TextView
+        android:id="@+id/tvMain"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#FFFFFF"
+        android:layout_centerInParent="true"
+        android:textSize="92sp" 
+        android:textStyle="bold"
+        android:text="E"/> 
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#FFFFFF"
+        android:layout_below="@+id/tvMain"
+        android:textSize="22sp"
+        android:layout_centerHorizontal="true"
+        android:text="COM"/> 
+
 </RelativeLayout>
