--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -5,6 +5,27 @@
         <!-- Customize your theme here. -->
         <item name="android:textColor">#000000</item>
         <item name="android:windowBackground">@color/splash_color</item>
+        <item name="android:spinnerStyle">@style/SpinnerStyle</item>
+        <item name="android:spinnerItemStyle">@style/spinnerItemStyle</item>
+        <item name="android:spinnerDropDownItemStyle">@style/spinnerDropDownItemStyle</item>
+    </style>
+
+    <!-- Spinner style -->
+    <style name="spinnerItemStyle">
+        <item name="android:gravity">center</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textColor">#00FFFFFF</item>
+    </style>
+
+    <!-- Spinner style drop down style -->
+    <style name="spinnerDropDownItemStyle">
+        <item name="android:gravity">center</item>
+        <item name="android:textAlignment">center</item>
+    </style>
+
+    <style name="SpinnerStyle" parent="android:Widget.Spinner">
+        <item name="android:background">@null</item>
+        <item name="android:dropDownSelector">@null</item>
     </style>
 
 </resources>
