--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -3,6 +3,7 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
+        <item name="colorPrimaryDark">@color/status_bar_color</item>
         <item name="android:textColor">#000000</item>
         <item name="android:windowBackground">@color/splash_color</item>
         <item name="android:spinnerStyle">@style/SpinnerStyle</item>
@@ -26,6 +27,11 @@
     <style name="SpinnerStyle" parent="android:Widget.Spinner">
         <item name="android:background">@null</item>
         <item name="android:dropDownSelector">@null</item>
+    </style>
+
+    <style name="SplashScreenTheme" parent="SplashScreen_SplashTheme">
+        <item name="colorPrimaryDark">@color/status_bar_color</item>
+        <item name="android:navigationBarColor">@color/status_bar_color</item>
     </style>
 
 </resources>
